--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,6 @@ jobs:
         run: |
           pwd
           ls -al
+          ls -al ~/.ssh/
       - name: SSH connect
         run: ssh david@34.126.154.112 "ip a"
